--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "flowbite": "^1.6.3"
+    "express": "^4.18.2",
+    "flowbite": "^1.6.3",
+    "mysql": "^2.18.1"
   }
 }
